--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@headlessui/react": "^2.1.0",
+    "@sanity/icons": "^3.3.1",
+    "@sanity/image-url": "1",
+    "@sanity/vision": "3",
     "@types/node": "^20.10.8",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.12",
     "clsx": "^2.1.0",
     "next": "^14.0.4",
+    "next-sanity": "^9.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sanity": "3",
+    "styled-components": "6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
